# MusicVisualizer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  MusicVisualizer.sln  MusicVisualizer.vcxproj  MusicVisualizer.vcxproj.filters  README.md  vcpkg.json
src/: Logger.cpp  Logger.h  main.cpp
src/Audio/: AudioData.h  Player.cpp  Player.h
src/Audio/SDL/: AudioData.h  AudioWrapper.cpp  AudioWrapper.h
src/Audio/SDL/Calculation/: AudioWrapper.cpp  AudioWrapper.h
src/Exception/: AppException.h
src/Graphic/: Renderer.cpp  Renderer.h  Window.h
src/Graphic/Gui/: Screen.cpp  Screen.h
src/Graphic/SDL/: RendererWrapper.cpp  RendererWrapper.h  Visualizer.cpp  Visualizer.h
